--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
@@ -12,9 +12,12 @@
         <p:ajax event="open" listener="#{pracownikNieobecnoscView.init()}" update="akordeon:PracownikUrlopForm akordeon:PracownikChorobaForm akordeon:PracownikZasilekForm akordeon:EkwiwalentForm akordeon:PracownikOddelegowanieForm" global="false"/>
          <p:ajax event="close" listener="#{pracownikNieobecnoscView.close()}" global="false"/>
          <p:ajax event="open" listener="#{pracownikNieobecnoscView.open()}" global="false"/>
-        <p:outputPanel>
+        <p:outputPanel >
             <p:tabView id="akordeon">
-                <p:tab title="wykorzystanie urlopu rok biezacy">
+                <p:tab title="wykorzystanie urlopu rok biezacy" id="panelurlop">
+                    <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="shadow-1 mb-3" style="margin-top: 5px;">
+                    <p:printer target="panelurlop" />
+            </p:commandButton>
                     <h:form  styleClass="formadmin" id="PracownikUrlopForm">
                         <p:panelGrid columns="4" rendered="#{pracownikNieobecnoscView.urlopprezentacja != null}">
                             <p:outputLabel value="stan na dzien" for="stannadzien" />
@@ -30,9 +33,15 @@
                             <p:outputLabel value="wymiar godzin rok bieżący" for="urloplp1" />
                             <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.urlopprezentacja.wymiarokresbiezacygodziny}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                         </p:panelGrid>
+                         <p:panelGrid columns="4" rendered="#{pracownikNieobecnoscView.urlopprezentacja != null}" style="margin-top: 5px;">
+                            <p:outputLabel value="do rozliczenia/wykorzystania w godz.:" for="przeniesienia" />
+                            <h:outputText id="przeniesienia" value="#{pracownikNieobecnoscView.urlopprezentacja.doprzeniesienia}" style="color: green;"/>
+                            <p:outputLabel value="w dniach:" for="przeniesieniadni" />
+                            <h:outputText id="przeniesieniadni" value="#{pracownikNieobecnoscView.urlopprezentacja.doprzeniesieniadni}" style="color: green;"/>
+                        </p:panelGrid>
                         <p:dataTable id="datalist" value="#{pracownikNieobecnoscView.urlopprezentacja.nieobecnoscwykorzystanieList}" var="urlopwykorzystanie"
                                      rowKey="#{urlopwykorzystanie.id}" emptyMessage="brak urlopu w roku bieżącym" rowIndexVar="indexurlop"
-                                     style="height: 560px;overflow-y: scroll; width: 750px; margin-left: 50px;" sortBy="#{urlopwykorzystanie.mc}"
+                                     style="height: 520px;overflow-y: scroll; width: 750px; margin-left: 50px;margin-top: 10px;" sortBy="#{urlopwykorzystanie.mc}"
                                      >
                             <p:column width="40" style="text-align: center;">
                                 <f:facet name="header">
@@ -86,10 +95,7 @@
                                 </p:column>
                             </p:summaryRow>
                         </p:dataTable>
-                        <p:panelGrid columns="4" rendered="#{pracownikNieobecnoscView.urlopprezentacja != null}" style="margin-top: 20px;">
-                            <p:outputLabel value="do rozliczenia/wykorzystania:" for="przeniesienia" />
-                            <h:outputText id="przeniesienia" value="#{pracownikNieobecnoscView.urlopprezentacja.doprzeniesienia}" style="color: green;"/>
-                        </p:panelGrid>
+                       
                     </h:form>
                 </p:tab>
                 <p:tab title="naliczenie ekwiwalentu za urlop">
