--- a/kadry/src/main/webapp/pracownik/sub/edycjadanych_angaz.xhtml
+++ b/kadry/src/main/webapp/pracownik/sub/edycjadanych_angaz.xhtml
@@ -121,25 +121,25 @@
                                 <f:convertDateTime locale="pl" />
                             </h:outputText>
                         </p:column>
-                        <p:column width="40" style="text-align: center;">
+<!--                        <p:column width="40" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="serial"/>
                             </f:facet>
                             <h:outputText value="#{itemAngaz.serialsp}"/>
-                        </p:column>
+                        </p:column>-->
                         <p:column  sortBy="#{itemAngaz.pracownik.nazwiskoImie}" sortOrder="asc" filterBy="#{itemAngaz.pracownik.nazwiskoImie}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="pracownik"/>
                             </f:facet>
                             <h:outputText value="#{itemAngaz.pracownik.nazwiskoImie}"/>
                         </p:column>
-                         <p:column filterBy="#{itemAngaz.pracownik.pesel}" filterMatchMode="startsWith">
+                         <p:column filterBy="#{itemAngaz.pracownik.pesel}" filterMatchMode="startsWith" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="Pesel"/>
                             </f:facet>
                             <h:outputText value="#{itemAngaz.pracownik.pesel}"/>
                         </p:column>
-                        <p:column width="50" filterBy="#{itemAngaz.przekroczenierok}" filterMatchMode="contains" style="text-align: center;">
+                        <p:column width="70" filterBy="#{itemAngaz.przekroczenierok}" filterMatchMode="contains" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="rok przekroczenie"/>
                             </f:facet>
@@ -147,22 +147,28 @@
                                 <p:ajax event="change" partialSubmit="true" global="false" listener="#{angazView.edytuj(itemAngaz)}"/>
                             </p:inputText>
                         </p:column>
-                         <p:column width="150" filterBy="#{itemAngaz.pracownik.email}" filterMatchMode="contains">
+                        <p:column width="60" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value="staż urlop"/>
+                            </f:facet>
+                            <h:outputText value="#{itemAngaz.stazurlop}"/>
+                        </p:column>
+                         <p:column width="200" filterBy="#{itemAngaz.pracownik.email}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="email"/>
                             </f:facet>
-                            <p:inputText value="#{itemAngaz.pracownik.email}">
+                             <p:inputText value="#{itemAngaz.pracownik.email}" size="50">
                                 <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracownikView.edytuj(itemAngaz.pracownik)}"/>
                             </p:inputText>
                         </p:column>
-                        <p:column style="text-align: center;" filterBy="#{itemAngaz.pracownik.telefon}" filterMatchMode="contains">
+<!--                        <p:column style="text-align: center;" filterBy="#{itemAngaz.pracownik.telefon}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="telefon"/>
                             </f:facet>
                             <p:inputText value="#{itemAngaz.pracownik.telefon}">
                                 <p:ajax event="change" partialSubmit="true" global="false" listener="#{pracownikView.edytuj(itemAngaz.pracownik)}"/>
                             </p:inputText>
-                        </p:column>
+                        </p:column>-->
                         <p:column width="40" style="text-align: center;" sortBy="#{itemAngaz.pracownik.fikcyjnymailsymbol}">
                             <f:facet name="header">
                                 <h:outputText value="fikcyjnyu mail"/>
