--- a/kadry/src/main/webapp/umowa/index.xhtml
+++ b/kadry/src/main/webapp/umowa/index.xhtml
@@ -36,9 +36,9 @@
                         </p:outputPanel>
                         <ui:include src="sub/menu_wiad.xhtml"/>
                         <ui:include src="sub/dialog_umowa1.xhtml"/><!-- menu contextowe i pole wiadomosci growl-->
-                        <p:outputPanel style="width: 1850px;">
+                        <p:outputPanel style="width: 1850px;height: 90%;overflow-y: scroll;">
                             
-                            <p:tabView id="akordeon" activeIndex="#{umowaView.tabView}">
+                            <p:tabView id="akordeon" activeIndex="#{umowaView.tabView}" >
                                 <p:tab title="umowy o pracę">
                                     <h:form>
                                     <p:outputPanel>
@@ -54,7 +54,7 @@
                                     <ui:include src="sub/edycjadanych_umowa.xhtml"/>
                                 </p:tab>
                                 <p:tab title="składniki">
-                                    <p:outputPanel style="height: 700px;overflow-y: scroll;" >
+                                    <p:outputPanel  >
                                         <ui:include src="sub/dane_skladnikwynagrodzenia.xhtml"/>
                                         <ui:include src="sub/dane_zmiennewynagrodzenia.xhtml"/>
                                         <ui:include src="sub/dane_potracenia.xhtml"/>
