--- a/npkpir_23/web/wspolny/sub/faktura/faktura_proforma.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_proforma.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets">
 
-    <p:tab id="proforma" title="Faktury proforma" rendered="#{WpisView.biuroiszef eq true}">
+    <p:tab id="proforma" title="Faktury proforma">
         <style>
             .ui-datatable .nrkolejny .ui-column-filter {
                 width: 85px !important;
