--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -288,7 +288,7 @@
                     <p:column headerText="data do" width="20" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};text-align: center;">
                         <h:outputText value="#{itempasekszcz.getDatadoShort()}"/>
                     </p:column>
-                    <p:column headerText="waluta" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
+                    <p:column headerText="waluta" width="50" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.wynagrodzeniezmiennawaluta}"/>
                     </p:column>
                     <p:column headerText="pln" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
@@ -297,10 +297,10 @@
                      <p:column headerText="po red. §11" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.kwotazmiennejporedukcji11}"/>
                     </p:column>
-                    <p:column headerText="st/h" width="40"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
+                    <p:column headerText="st/h wal." width="30"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.stawkanagodzinewaluta}"/>
                     </p:column>
-                     <p:column headerText="st/h" width="40"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
+                     <p:column headerText="st/h pln." width="40"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.stawkanagodzine}"/>
                     </p:column>
                     <p:column headerText="st/dz" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
@@ -312,7 +312,7 @@
                     <p:column headerText="redukcja" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.redukcja}"/>
                     </p:column>
-                    <p:column headerText="waluta" width="30" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};text-align: center;">
+                    <p:column headerText="wal." width="20" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};text-align: center;">
                         <bcf:outputpl value="#{itempasekszcz.waluta}"/>
                     </p:column>
                 </p:dataTable>
