--- a/kadry/src/main/webapp/umowa/index.xhtml
+++ b/kadry/src/main/webapp/umowa/index.xhtml
@@ -36,7 +36,7 @@
                         </p:outputPanel>
                         <ui:include src="sub/menu_wiad.xhtml"/>
                         <ui:include src="sub/dialog_umowa1.xhtml"/><!-- menu contextowe i pole wiadomosci growl-->
-                        <p:outputPanel style="width: 1850px;height: 90%;overflow-y: scroll;">
+                        <p:outputPanel style="width: 1950px;height: 90%;overflow-y: scroll;">
                             
                             <p:tabView id="akordeon" activeIndex="#{umowaView.tabView}" >
                                 <p:tab title="umowy o pracę">
@@ -55,10 +55,14 @@
                                 </p:tab>
                                 <p:tab title="składniki">
                                     <p:outputPanel  >
-                                        <ui:include src="sub/dane_skladnikwynagrodzenia.xhtml"/>
-                                        <ui:include src="sub/dane_zmiennewynagrodzenia.xhtml"/>
-                                        <ui:include src="sub/dane_potracenia.xhtml"/>
-                                        <ui:include src="sub/dane_zmiennapotracenie.xhtml"/>
+                                        <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
+                                            <ui:include src="sub/dane_skladnikwynagrodzenia.xhtml"/>
+                                            <ui:include src="sub/dane_zmiennewynagrodzenia.xhtml"/>
+                                        </p:panelGrid>
+                                        <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
+                                            <ui:include src="sub/dane_potracenia.xhtml"/>
+                                            <ui:include src="sub/dane_zmiennapotracenie.xhtml"/>
+                                        </p:panelGrid>
                                         <ui:include src="sub/dane_stanowisko.xhtml"/>
                                         <ui:include src="sub/dane_etat.xhtml"/>
                                     </p:outputPanel>
