--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
@@ -6,9 +6,9 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets"
 >
-    <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
+ 
            
-            <p:outputPanel style="height: 150px" styleClass="panelzramka">
+<!--            <p:outputPanel style="height: 150px" styleClass="panelzramka">
                 <h:form styleClass="formumowa" id="ZmiennapotraceniaCreateForm">
                     <p:panel header="Dodawanie/edycja zmiennych potrąceń"/>
                     <h:panelGroup id="display">
@@ -30,57 +30,61 @@
                         <p:commandButton value="#{bundle.Cancel}"/>
                     </h:panelGroup>
                 </h:form>
-            </p:outputPanel>
+            </p:outputPanel>-->
         <p:outputPanel>
-                <h:form styleClass="formumowa" id="SkladnikporaceniaListForm">
+                <h:form styleClass="formumowa" id="ZmiennaporaceniaListForm">
                     <p:panel header="Wykaz zmiennych potrąceń">
                         <p:dataTable id="datalist" value="#{zmiennaPotraceniaView.lista}" var="itemzmiennapotr"
                                      selectionMode="multiple" selection="#{pracownikView.selectedlista}"
                                      rowKey="#{itemzmiennapotr.id}" emptyMessage="Składnik nie posiada zdefiniowanych zmiennych"
-                                     style="height: 150px; overflow-y: scroll;"
+                                     style="height: 200px; overflow-y: scroll;width: 1000px;"
                                      >
 
-                            <p:column width="30" style="text-align: center;">
+                            <p:column width="30" style="text-align: center;" sortable="true" sortBy="#{itemzmiennapotr.id}" sortOrder="desc">
                                 <f:facet name="header">
                                     <h:outputText value="id"/>
                                 </f:facet>
                                 <h:outputText value="#{itemzmiennapotr.id}"/>
                             </p:column>
-                            <p:column width="100">
+                            <p:column width="200">
                                 <f:facet name="header">
                                     <h:outputText value="nazwa"/>
                                 </f:facet>
-                                <h:outputText value="#{itemzmiennapotr.nazwa}"/>
+                                <p:inputText value="#{itemzmiennapotr.nazwa}"/>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="data od"/>
                                 </f:facet>
-                                <h:outputText value="#{itemzmiennapotr.dataod}"/>
+                                 <p:inputText value="#{itemzmiennapotr.dataod}" size="10" placeholder="____-__-__" maxlength="10">
+                                     <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                                </p:inputText>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="data do"/>
                                 </f:facet>
-                                <h:outputText value="#{itemzmiennapotr.datado}"/>
+                                <p:inputText value="#{itemzmiennapotr.datado}" size="10" placeholder="____-__-__" maxlength="10">
+                                     <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                                </p:inputText>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="kwota stała"/>
                                 </f:facet>
-                                <bcf:outputpl value="#{itemzmiennapotr.kwotastala}"/>
+                                <bcf:inputpl value="#{itemzmiennapotr.kwotastala}"/>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="suma zajęcia"/>
                                 </f:facet>
-                                <bcf:outputpl value="#{itemzmiennapotr.kwotakomornicza}"/>
+                                <bcf:inputpl value="#{itemzmiennapotr.kwotakomornicza}"/>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="rozliczono"/>
                                 </f:facet>
-                                <bcf:outputpl value="#{itemzmiennapotr.kwotakomorniczarozliczona}"/>
+                                <bcf:inputpl value="#{itemzmiennapotr.kwotakomorniczarozliczona}"/>
                             </p:column>
                             <p:column width="20" style="text-align: center;">
                                 <f:facet name="header">
@@ -89,7 +93,10 @@
                                 <p:selectBooleanCheckbox value="#{itemzmiennapotr.maxustawowy}"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
-                                <p:commandButton icon="pi pi-pencil" actionListener="#{zmiennaPotraceniaView.wybierzdoedycji(itemzmiennapotr)}" update="north @(form)"/>
+                                  <p:column width="30" style="text-align: center;">
+                                    <p:commandButton  icon="pi pi-save" actionListener="#{zmiennaPotraceniaView.create(itemzmiennapotr)}" update="akordeon:ZmiennaporaceniaListForm" rendered="#{itemzmiennapotr.id eq null}"/>
+                                    <p:commandButton  icon="pi pi-pencil" actionListener="#{zmiennaPotraceniaView.edit(itemzmiennapotr)}" rendered="#{itemzmiennapotr.id ne null}"/>
+                                </p:column>
                             </p:column>
                             <p:column style="text-align: center;">
                                 <p:commandButton icon="pi pi-trash" actionListener="#{zmiennaPotraceniaView.usunZmiennaPotr(itemzmiennapotr)}" update="north @(form)"/>
@@ -98,5 +105,5 @@
                     </p:panel>
                 </h:form>
             </p:outputPanel>
-        </p:panelGrid>
+ 
 </ui:composition>
