--- a/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
@@ -6,8 +6,8 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets"
     >
-    <p:panelGrid columns="2">
-        <p:outputPanel style="height: 140px;width: 860px;" styleClass="panelzramka">
+
+<!--        <p:outputPanel style="height: 140px;width: 860px;" styleClass="panelzramka">
             <h:form styleClass="formumowa" id="EtatCreateForm">
                 <p:panel header="Dodawanie/edycja etatu do umowy"  />
                 <h:panelGroup id="display"  >
@@ -25,17 +25,17 @@
                     <p:commandButton value="#{bundle.Cancel}" onclick="EtatCreateDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
-        </p:outputPanel>
+        </p:outputPanel>-->
         <p:outputPanel>
                 <h:form styleClass="formumowa" id="EtatListForm">
                     <p:panel header="Wykaz historii etatów"  rendered="#{umowaView.rodzajumowy eq '1'}">
                         <p:dataTable id="datalist" value="#{etatView.lista}" var="itemetat"
                                      selectionMode="single" selection="#{etatView.selectedlista}" sortBy="#{itemetat.dataod}"
                                      rowKey="#{itemetat.id}" emptyMessage="Składnik nie posiada zdefiniowanych zmiennych"
-                                     style="height: 100px; overflow-y: scroll;width: 700px;"
+                                     style="height: 150px; overflow-y: scroll;width: 600px;"
                                      >
 
-                            <p:column width="40" style="text-align: center;">
+                            <p:column width="40" style="text-align: center;" sortable="true" sortBy="#{itemetat.id}" sortOrder="desc">
                                 <f:facet name="header">
                                     <h:outputText value="id"/>
                                 </f:facet>
@@ -45,24 +45,33 @@
                                 <f:facet name="header">
                                     <h:outputText value="data od"/>
                                 </f:facet>
-                                <h:outputText value="#{itemetat.dataod}"/>
+                                <p:inputText value="#{itemetat.dataod}" size="10" placeholder="____-__-__" maxlength="10">
+                                     <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                                </p:inputText>
                             </p:column>
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="data do"/>
                                 </f:facet>
-                                <h:outputText value="#{itemetat.datado}"/>
+                                <p:inputText value="#{itemetat.datado}" size="10" placeholder="____-__-__" maxlength="10">
+                                     <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                                </p:inputText>
                             </p:column>
-                            <p:column>
+                            <p:column style="text-align: center;">
                                 <f:facet name="header">
-                                    <h:outputText value="etat"/>
+                                    <h:outputText value="etat l"/>
                                 </f:facet>
-                                <h:outputText value="#{itemetat.etat1}"/>
-                                <h:outputText value="/"/>
-                                <h:outputText value="#{itemetat.etat2}"/>
+                                <p:inputText value="#{itemetat.etat1}" size="3" maxlength="1"/>
+                            </p:column>
+                            <p:column style="text-align: center;">
+                                <f:facet name="header">
+                                    <h:outputText value="etat m"/>
+                                </f:facet>
+                                <p:inputText value="#{itemetat.etat2}" size="3" maxlength="1"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
-                                <p:commandButton icon="pi pi-pencil"  actionListener="#{etatView.wybierzdoedycji(itemetat)}" update="north, akordeon:EtatCreateForm"/>
+                                <p:commandButton  icon="pi pi-save" actionListener="#{etatView.create(itemetat)}" update="akordeon:EtatListForm" rendered="#{itemetat.id eq null}"/>
+                                 <p:commandButton  icon="pi pi-pencil" actionListener="#{etatView.edit(itemetat)}" rendered="#{itemetat.id ne null}"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
                                 <p:commandButton icon="pi pi-trash" actionListener="#{etatView.usunEtat(itemetat)}" update="north akordeon:EtatListForm"/>
@@ -71,5 +80,4 @@
                     </p:panel>
                 </h:form>
             </p:outputPanel>
-    </p:panelGrid>
 </ui:composition>
