nowa kolumna w skladnikach wynagrodzenia bez zus 52 ze wzglednu na art. 176

--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -221,6 +221,18 @@
                         </p:column>
                         <p:column style="text-align: center;" width="50">
                             <f:facet name="header">
+                                <h:outputText value="bez ZUS 51"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.zus0bezzus1}"/>
+                        </p:column>
+                        <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="bez ZUS 52"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.zdrowotna0bezzdrowotnej}"/>
+                        </p:column>
+                         <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
                                 <h:outputText value="zus0 bezzus1"/>
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item11.zus0bezzus1}"/>
