--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -573,6 +573,7 @@
                         </p:column>
 
                     </p:dataTable>
+                     <p:commandButton value="zachowaj" styleClass="buttonnorm" actionListener="#{rodzajenieobecnosciView.zachowaj}" update="@form"/>
                 </h:form>
             </p:tab>
             <p:tab title="Zmienne podatkowe">
