waloryzacja chorobowe podstawa

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -264,6 +264,7 @@
                         <h:outputText value="za urlop" rendered="#{itempasekszcz.urlopSP}"/>
                          <h:outputText value="redukcja" rendered="#{itempasekszcz.redukcjaSP}"/>
                          <h:outputText value="potrącenie" style="color:red;" rendered="#{itempasekszcz.potracenie}"/>
+                         <h:outputText value="wyr." style="color:blue;" rendered="#{itempasekszcz.wyrownanie}"/>
                          <h:outputText value="#{itempasekszcz.procentzwolnienia},%"  rendered="#{itempasekszcz.procentzwolnienia ne 0.0}"/>
                          <h:outputText value="#{itempasekszcz.uwagi}" rendered="#{itempasekszcz.uwagi ne null}"/>
                     </p:column>
