--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -268,7 +268,7 @@
                             <bcf:outputpl value="#{itempasek.nettowaluta}" />
                         </p:column>
                         <p:column width="20" style="text-align: center;">
-                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="NieobecnoscListForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm:datalist"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
@@ -294,6 +294,7 @@
                         <h:outputText value="za urlop" rendered="#{itempasekszcz.urlopSP}"/>
                          <h:outputText value="redukcja" rendered="#{itempasekszcz.redukcjaSP}"/>
                          <h:outputText value="potrącenie" style="color:red;" rendered="#{itempasekszcz.potracenie}"/>
+                         <h:outputText value="wyr." style="color:blue;" rendered="#{itempasekszcz.wyrownanie}"/>
                          <h:outputText value="#{itempasekszcz.procentzwolnienia}%,"  rendered="#{itempasekszcz.procentzwolnienia ne 0.0}"/>
                          <h:outputText value="#{itempasekszcz.uwagi}" rendered="#{itempasekszcz.uwagi ne null}"/>
                     </p:column>
