--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
@@ -190,11 +190,14 @@
                                     <p:column width="20" style="text-align: center;">
                                         <p:rowToggler rendered="#{itempasekpotr.sredniadlanieobecnosciList.size() gt 0}"/>
                                     </p:column>
-                                    <p:column style="text-align: center;" headerText="lp" width="40">
+                                    <p:column style="text-align: center;" headerText="lp" width="20">
                                         <h:outputText value="#{indexpasekszcz2+1}"/>
                                     </p:column>
-                                    <p:column headerText="kod" width="40" sortBy="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.kod}" sortPriority="0" sortOrder="asc">
-                                        <h:outputText value="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.kod}"/>
+                                    <p:column style="text-align: center;" headerText="wal." width="20">
+                                        <h:outputText value="&#x2714;" rendered="#{itempasekpotr.wyrownaniepodstawy}" style="color: blue;"/>
+                                    </p:column>
+                                    <p:column headerText="kod" width="40" sortBy="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.rodzajnieobecnosci.kod}" sortPriority="0" sortOrder="asc">
+                                        <h:outputText value="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.rodzajnieobecnosci.kod}"/>
                                     </p:column>
                                     <p:column headerText="składnik" width="250" >
                                         <h:outputText value="#{itempasekpotr.nieobecnosc.opisRodzajSwiadczenie}"/>
